--- a/aidlclient/build.gradle
+++ b/aidlclient/build.gradle
@@ -1,16 +1,18 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    buildToolsVersion "25.0.3"
+
     defaultConfig {
-        applicationId "hsj.whatever.com.selfviewdemo"
-        minSdkVersion 17
+        applicationId "com.colander.aidlclient"
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -20,21 +22,16 @@ android {
     }
     sourceSets {
         main {
-        java.srcDirs = ['src/main/java', 'src/main/aidl']
+            java.srcDirs = ['src/main/java', 'src/main/aidl']
         }
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile project(':sweet-alert-dialog')
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-}
-repositories {
-    mavenCentral()
 }
