--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':sweet-alert-dialog')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+	
+	compile "com.jakewharton:butterknife:8.8.1"
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
 repositories {
     mavenCentral()
