--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,18 @@
 
         <service android:name=".MyIntentService"/>
         <service android:name=".services.FlashIntentService" />
+        
+        <provider
+            android:authorities="hsj.whatever.com.selfviewdemo"
+            android:name="android.support.v4.content.FileProvider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
 
     </application>
-
+    
+        
 </manifest>
