--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,13 +40,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:25.4.0'
     testCompile 'junit:junit:4.12'
     compile project(':sweet-alert-dialog')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 	
 	compile "com.jakewharton:butterknife:8.8.1"
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    compile 'com.android.support:palette-v7:25.4.0'
 }
 repositories {
     mavenCentral()
